# Finance-Crew

./: .gitignore  pyproject.toml
app/data/: portfolio.csv
app/finance_crew/: crew.py  llm.py  main.py
app/finance_crew/config/: agents.yaml  tasks.yaml
app/finance_crew/tools/researcher_agent/: ComputeMarketMetricsTool.py  FetchYFinancePricesTool.py  ReadPortfolioTickersTool.py  __init__.py
app/finance_crew/tools/risk_analyst/: BetaCorrelationTool.py  BuildPortfolioReturnsTool.py  ConcentrationMetricsTool.py  DataQualityCheckTool.py  ExposuresVsTargetTool.py  PortfolioRiskMetricsTool.py  __init__.py
